// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Choice Normal 1`] = `
<div
  style={
    Object {
      "margin": "auto",
      "maxWidth": "80%",
    }
  }
>
  <div
    className="choice__Wrapper-sc-1k1omlp-0 bghiPC"
  >
    <select
      className="choice__Select-sc-1k1omlp-1 bLBqKy"
      onChange={[Function]}
    >
      <option>
        Option 1
      </option>
      <option>
        Option 2
      </option>
    </select>
  </div>
</div>
`;

exports[`Storyshots Choices Normal 1`] = `
<div
  style={
    Object {
      "margin": "auto",
      "maxWidth": "80%",
    }
  }
>
  <div
    className="choices__Container-sc-800kf9-0 hmyeUu"
  >
    <span
      className="choices__Text-sc-800kf9-1 eQJQMD"
    >
      I am a
    </span>
    <div
      className="choice__Wrapper-sc-1k1omlp-0 bghiPC"
    >
      <select
        className="choice__Select-sc-1k1omlp-1 bLBqKy"
        onChange={[Function]}
      >
        <option>
          Front End Engineer I
        </option>
        <option>
          Front End Engineer II
        </option>
        <option>
          Lead Front End Engineer
        </option>
        <option>
          Back End Engineer I
        </option>
        <option>
          Back End Engineer II
        </option>
        <option>
          Lead Back End Engineer
        </option>
        <option>
          Customer Success Champion I
        </option>
        <option>
          Customer Success Champion II
        </option>
        <option>
          Lead Customer Success Champion
        </option>
      </select>
    </div>
    <span
      className="choices__Text-sc-800kf9-1 eQJQMD"
    >
      and, for health benefits, I
    </span>
    <div
      className="choice__Wrapper-sc-1k1omlp-0 bghiPC"
    >
      <select
        className="choice__Select-sc-1k1omlp-1 bLBqKy"
        onChange={[Function]}
      >
        <option>
          donʼt
        </option>
        <option>
          do
        </option>
      </select>
    </div>
    <span
      className="choices__Text-sc-800kf9-1 eQJQMD"
    >
      have a spouse / dependents. Iʼve been with Sparksuite for
    </span>
    <div
      className="choice__Wrapper-sc-1k1omlp-0 bghiPC"
    >
      <select
        className="choice__Select-sc-1k1omlp-1 bLBqKy"
        onChange={[Function]}
      >
        <option>
          less than one year
        </option>
        <option>
          one to two years
        </option>
        <option>
          two to three years
        </option>
        <option>
          three to four years
        </option>
        <option>
          more than four years
        </option>
      </select>
    </div>
  </div>
</div>
`;

exports[`Storyshots Compensation Normal 1`] = `
<div
  style={
    Object {
      "margin": "auto",
      "maxWidth": "80%",
    }
  }
>
  <div
    className="container__Container-sc-8aaowj-0 kvuGWV"
  >
    <div
      style={
        Object {
          "fontSize": "1rem",
          "position": "relative",
          "textAlign": "center",
        }
      }
    >
      <div
        className="figure__Amount-sc-1fhptnd-1 kgQDra"
        style={
          Object {
            "color": undefined,
          }
        }
      >
        $85,000
      </div>
      <div
        className="figure__Subtitle-sc-1fhptnd-2 coJNdF"
      >
        BASE SALARY
      </div>
    </div>
    <div
      className="divider__LineBox-sc-1mhowia-0 gWpzuR"
    >
      <div
        className="divider__Text-sc-1mhowia-1 eXDbat"
      >
        plus
      </div>
    </div>
    <div
      className="compensation__FlexDiv-sc-1127ja8-0 czZhCF"
    >
      <div>
        <div
          style={
            Object {
              "fontSize": "0.8rem",
              "position": "relative",
              "textAlign": "center",
            }
          }
        >
          <div
            className="figure__Amount-sc-1fhptnd-1 kgQDra"
            style={
              Object {
                "color": "#67b1d6",
              }
            }
          >
            $4,800
          </div>
          <div
            className="figure__Subtitle-sc-1fhptnd-2 coJNdF"
          >
            TAX-FREE HRA FUNDS
            <a
              href="https://handbook.sparksuite.com/benefits/health.html"
              rel="noopener noreferrer"
              target="_blank"
            >
              <i
                className="far fa-info-circle"
              />
            </a>
          </div>
        </div>
        <p>
          Flexible funds that reimburse you for nearly any health-related expense, including insurance premiums, deductibles, copayments, coinsurance, eyeglasses, sunscreen, and so much more.
        </p>
      </div>
      <div>
        <div
          style={
            Object {
              "fontSize": "0.8rem",
              "position": "relative",
              "textAlign": "center",
            }
          }
        >
          <div
            className="figure__UpTo-sc-1fhptnd-0 cBsEyV"
          >
            UP TO
          </div>
          <div
            className="figure__Amount-sc-1fhptnd-1 kgQDra"
            style={
              Object {
                "color": "#67b1d6",
              }
            }
          >
            $3,400
          </div>
          <div
            className="figure__Subtitle-sc-1fhptnd-2 coJNdF"
          >
            MATCHING 401(k) CONTRIBUTIONS
            <a
              href="https://handbook.sparksuite.com/benefits/401(k).html"
              rel="noopener noreferrer"
              target="_blank"
            >
              <i
                className="far fa-info-circle"
              />
            </a>
          </div>
        </div>
        <p>
          Company matching up to 4%, beginning with your first paycheck. Plus, your savings are invested through an ultra low-fee provider, which could net you hundreds of thousands of dollars more than typical 401(k) plans.
        </p>
      </div>
    </div>
    <div
      className="divider__LineBox-sc-1mhowia-0 gWpzuR"
    >
      <div
        className="divider__Text-sc-1mhowia-1 eXDbat"
      >
        along with
      </div>
    </div>
    <div
      className="compensation__Perks-sc-1127ja8-1 dOpgVL"
    >
      Flexible office hours, free-lunch Fridays, generous paid time off, 40 hour work weeks, great snacks, and all these other
       
      <a
        href="https://handbook.sparksuite.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        awesome benefits & perks
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots Container Normal 1`] = `
<div
  style={
    Object {
      "margin": "auto",
      "maxWidth": "80%",
    }
  }
>
  <div
    className="container__Container-sc-8aaowj-0 kvuGWV"
  />
</div>
`;

exports[`Storyshots Divider Longer 1`] = `
<div
  style={
    Object {
      "margin": "auto",
      "maxWidth": "80%",
    }
  }
>
  <div
    className="divider__LineBox-sc-1mhowia-0 gWpzuR"
  >
    <div
      className="divider__Text-sc-1mhowia-1 eXDbat"
    >
      a much longer example
    </div>
  </div>
</div>
`;

exports[`Storyshots Divider Normal 1`] = `
<div
  style={
    Object {
      "margin": "auto",
      "maxWidth": "80%",
    }
  }
>
  <div
    className="divider__LineBox-sc-1mhowia-0 gWpzuR"
  >
    <div
      className="divider__Text-sc-1mhowia-1 eXDbat"
    >
      example
    </div>
  </div>
</div>
`;

exports[`Storyshots Figure Basic 1`] = `
<div
  style={
    Object {
      "margin": "auto",
      "maxWidth": "80%",
    }
  }
>
  <div
    style={
      Object {
        "fontSize": "1rem",
        "position": "relative",
        "textAlign": "center",
      }
    }
  >
    <div
      className="figure__Amount-sc-1fhptnd-1 kgQDra"
      style={
        Object {
          "color": undefined,
        }
      }
    >
      $123,456
    </div>
    <div
      className="figure__Subtitle-sc-1fhptnd-2 coJNdF"
    >
      EXAMPLE SUBTITLE
    </div>
  </div>
</div>
`;

exports[`Storyshots Figure Custom Color 1`] = `
<div
  style={
    Object {
      "margin": "auto",
      "maxWidth": "80%",
    }
  }
>
  <div
    style={
      Object {
        "fontSize": "1rem",
        "position": "relative",
        "textAlign": "center",
      }
    }
  >
    <div
      className="figure__Amount-sc-1fhptnd-1 kgQDra"
      style={
        Object {
          "color": "#f00",
        }
      }
    >
      $123,456
    </div>
    <div
      className="figure__Subtitle-sc-1fhptnd-2 coJNdF"
    >
      EXAMPLE SUBTITLE
    </div>
  </div>
</div>
`;

exports[`Storyshots Figure Info Icon 1`] = `
<div
  style={
    Object {
      "margin": "auto",
      "maxWidth": "80%",
    }
  }
>
  <div
    style={
      Object {
        "fontSize": "1rem",
        "position": "relative",
        "textAlign": "center",
      }
    }
  >
    <div
      className="figure__Amount-sc-1fhptnd-1 kgQDra"
      style={
        Object {
          "color": undefined,
        }
      }
    >
      $123,456
    </div>
    <div
      className="figure__Subtitle-sc-1fhptnd-2 coJNdF"
    >
      EXAMPLE SUBTITLE
      <a
        href="https://www.sparksuite.com/"
        rel="noopener noreferrer"
        target="_blank"
      >
        <i
          className="far fa-info-circle"
        />
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots Figure Smaller 1`] = `
<div
  style={
    Object {
      "margin": "auto",
      "maxWidth": "80%",
    }
  }
>
  <div
    style={
      Object {
        "fontSize": "0.8rem",
        "position": "relative",
        "textAlign": "center",
      }
    }
  >
    <div
      className="figure__Amount-sc-1fhptnd-1 kgQDra"
      style={
        Object {
          "color": undefined,
        }
      }
    >
      $123,456
    </div>
    <div
      className="figure__Subtitle-sc-1fhptnd-2 coJNdF"
    >
      EXAMPLE SUBTITLE
    </div>
  </div>
</div>
`;

exports[`Storyshots Figure Up To 1`] = `
<div
  style={
    Object {
      "margin": "auto",
      "maxWidth": "80%",
    }
  }
>
  <div
    style={
      Object {
        "fontSize": "1rem",
        "position": "relative",
        "textAlign": "center",
      }
    }
  >
    <div
      className="figure__UpTo-sc-1fhptnd-0 cBsEyV"
    >
      UP TO
    </div>
    <div
      className="figure__Amount-sc-1fhptnd-1 kgQDra"
      style={
        Object {
          "color": undefined,
        }
      }
    >
      $123,456
    </div>
    <div
      className="figure__Subtitle-sc-1fhptnd-2 coJNdF"
    >
      EXAMPLE SUBTITLE
    </div>
  </div>
</div>
`;

exports[`Storyshots Gradient Normal 1`] = `
<div
  style={
    Object {
      "margin": "auto",
      "maxWidth": "80%",
    }
  }
>
  <div
    className="gradient__Gradient-zihgh-0 duAMOp"
  />
</div>
`;

exports[`Storyshots Header Normal 1`] = `
<div
  style={
    Object {
      "margin": "auto",
      "maxWidth": "80%",
    }
  }
>
  <div
    className="header__Title-vob98y-0 dbnGjZ"
  >
    Sparksuiteʼs Salary Calculator
  </div>
  <div
    className="header__Subtitle-vob98y-1 jDVMfa"
  >
    Transparent, predictable, & holistic compensation
  </div>
</div>
`;

exports[`Storyshots Position description Normal 1`] = `
<div
  style={
    Object {
      "margin": "auto",
      "maxWidth": "80%",
    }
  }
>
  <div
    className="container__Container-sc-8aaowj-0 kvuGWV"
  >
    A level I front end engineer is just beginning their professional career in front end software engineering and is working toward a strong foundational knowledge of the fundamentals.
  </div>
</div>
`;
